--- a/UnrealLauncher/UnrealLauncher.csproj
+++ b/UnrealLauncher/UnrealLauncher.csproj
@@ -6,6 +6,7 @@
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,7 +19,7 @@
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.0" />
-        <PackageReference Include="FluentIcons.Avalonia" Version="1.1.298" />
+        <PackageReference Include="FluentIcons.Avalonia" Version="1.1.300" />
     </ItemGroup>
 
     <ItemGroup>
