--- a/UnrealLauncher/UnrealLauncher.csproj
+++ b/UnrealLauncher/UnrealLauncher.csproj
@@ -7,22 +7,26 @@
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
         <LangVersion>default</LangVersion>
+        <Version>0.0.4</Version>
+        <ApplicationIcon>Assets\icon.ico</ApplicationIcon>
+        <Authors>Rokukkkk</Authors>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.3.0" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.3.0" />
-        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.0" />
+        <PackageReference Include="Avalonia" Version="11.3.0"/>
+        <PackageReference Include="Avalonia.Desktop" Version="11.3.0"/>
+        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.0"/>
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Include="Avalonia.Diagnostics" Version="11.3.0">
             <IncludeAssets Condition="'$(Configuration)' != 'Debug'">none</IncludeAssets>
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.0" />
-        <PackageReference Include="FluentIcons.Avalonia" Version="1.1.300" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.0"/>
+        <PackageReference Include="FluentIcons.Avalonia" Version="1.1.300"/>
     </ItemGroup>
 
     <ItemGroup>
-        <AvaloniaResource Include="Assets\no_pic.png" />
+        <AvaloniaResource Include="Assets\no_pic.png"/>
+        <AvaloniaResource Include="Assets\icon.ico"/>
     </ItemGroup>
 </Project>
